--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.4.2",
+    "react-typed": "^1.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
